--- a/CppTutorialProject.vcxproj.filters
+++ b/CppTutorialProject.vcxproj.filters
@@ -168,6 +168,9 @@
     <ClCompile Include="Source\Components\Motion\WayMover.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Components\Player\TopDownCamera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\resource.h">
@@ -258,6 +261,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Components\Motion\WayMover.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Components\Player\TopDownCamera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
