Ultra beta branch build 1961 Library and shaders update

--- a/CppTutorialProject.vcxproj.filters
+++ b/CppTutorialProject.vcxproj.filters
@@ -266,6 +266,9 @@
     <ClInclude Include="Source\Components\Player\TopDownCamera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Components\Units\Unit.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Source\project.rc">
