--- a/CppTutorialProject.vcxproj
+++ b/CppTutorialProject.vcxproj
@@ -131,12 +131,14 @@
     <ClCompile Include="Source\Components\Player\CameraControls.cpp" />
     <ClCompile Include="Source\Components\Player\FPSPlayer.cpp" />
     <ClCompile Include="Source\Components\Player\Player.cpp" />
+    <ClCompile Include="Source\Components\Player\StrategyCotroller.cpp" />
     <ClCompile Include="Source\Components\Player\TopDownCamera.cpp" />
     <ClCompile Include="Source\Components\Player\VRPlayer.cpp" />
     <ClCompile Include="Source\Components\Sound\AmbientNoise.cpp" />
     <ClCompile Include="Source\Components\Sound\ImpactNoise.cpp" />
     <ClCompile Include="Source\Components\Triggers\CollisionTrigger.cpp" />
     <ClCompile Include="Source\Components\Triggers\PushButton.cpp" />
+    <ClCompile Include="Source\Components\AI\Unit.cpp" />
     <ClCompile Include="Source\Components\Weapons\Bullet.cpp" />
     <ClCompile Include="Source\Components\Weapons\FPSGun.cpp" />
     <ClCompile Include="Source\Components\Weapons\FPSWeapon.cpp" />
@@ -176,12 +178,14 @@
     <ClInclude Include="Source\Components\Player\CameraControls.h" />
     <ClInclude Include="Source\Components\Player\FPSPlayer.h" />
     <ClInclude Include="Source\Components\Player\Player.h" />
+    <ClInclude Include="Source\Components\Player\StrategyCotroller.h" />
     <ClInclude Include="Source\Components\Player\TopDownCamera.h" />
     <ClInclude Include="Source\Components\Player\VRPlayer.h" />
     <ClInclude Include="Source\Components\Sound\AmbientNoise.h" />
     <ClInclude Include="Source\Components\Sound\ImpactNoise.h" />
     <ClInclude Include="Source\Components\Triggers\CollisionTrigger.h" />
     <ClInclude Include="Source\Components\Triggers\PushButton.h" />
+    <ClInclude Include="Source\Components\AI\Unit.h" />
     <ClInclude Include="Source\Components\Weapons\Bullet.h" />
     <ClInclude Include="Source\Components\Weapons\FPSWeapon.h" />
     <ClInclude Include="Source\Components\Weapons\Projectile.h" />
