--- a/CppTutorialProject.vcxproj
+++ b/CppTutorialProject.vcxproj
@@ -50,7 +50,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>Create</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
@@ -58,7 +58,7 @@
       <ConformanceMode>false</ConformanceMode>
       <AdditionalIncludeDirectories>$(ULTRAENGINE)\Include\Libraries\Draco\src;$(ULTRAENGINE)\Include\Libraries\libogg\include;$(ULTRAENGINE)\Include\Libraries\libvorbis\include;$(ULTRAENGINE)\Include;$(ULTRAENGINE)\Include\Libraries\zlib;$(ULTRAENGINE)\Include\Libraries\Box2D;$(UniversalCRT_LibraryPath);$(ULTRAENGINE)\Include\Libraries\freetype\include;$(ULTRAENGINE)\Include\Libraries\OpenAL\include;$(ULTRAENGINE)\Include\Libraries\RecastNavigation\RecastDemo\Include;$(ULTRAENGINE)\Include\Libraries\RecastNavigation\DetourCrowd\Include;$(ULTRAENGINE)\Include\Libraries\RecastNavigation\DetourTileCache\Include;$(ULTRAENGINE)\Include\Libraries\RecastNavigation\DebugUtils\Include;$(ULTRAENGINE)\Include\Libraries\RecastNavigation\Recast\Include;$(ULTRAENGINE)\Include\Libraries\RecastNavigation\Detour\Include;$(ULTRAENGINE)\Include\Libraries\sol3\include;$(ULTRAENGINE)\Include\Libraries\Lua\src;$(ULTRAENGINE)\Include\Libraries\enet\include;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dTinyxml;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dExtensions;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dIkSolver;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dJoints;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dModels\dVehicle;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dModels\dCharacter;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dModels;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dParticles;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dCore;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dCollision;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dVehicle\dMultiBodyVehicle;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dVehicle;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dMath;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dgCore;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dgNewton;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dAnimation;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dgTimeTracker;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dContainers;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dCustomJoints</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <PrecompiledHeaderFile>UltraEngine.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile>Leadwerks.h</PrecompiledHeaderFile>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <FloatingPointModel>Fast</FloatingPointModel>
@@ -81,7 +81,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>Create</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -93,7 +93,7 @@
       <AdditionalIncludeDirectories>$(ULTRAENGINE)\Include\Libraries\Draco\src;$(ULTRAENGINE)\Include\Libraries\libogg\include;$(ULTRAENGINE)\Include\Libraries\libvorbis\include;$(ULTRAENGINE)\Include;$(ULTRAENGINE)\Include\Libraries\zlib;$(ULTRAENGINE)\Include\Libraries\Box2D;$(UniversalCRT_LibraryPath);$(ULTRAENGINE)\Include\Libraries\freetype\include;$(ULTRAENGINE)\Include\Libraries\OpenAL\include;$(ULTRAENGINE)\Include\Libraries\RecastNavigation\RecastDemo\Include;$(ULTRAENGINE)\Include\Libraries\RecastNavigation\DetourCrowd\Include;$(ULTRAENGINE)\Include\Libraries\RecastNavigation\DetourTileCache\Include;$(ULTRAENGINE)\Include\Libraries\RecastNavigation\DebugUtils\Include;$(ULTRAENGINE)\Include\Libraries\RecastNavigation\Recast\Include;$(ULTRAENGINE)\Include\Libraries\RecastNavigation\Detour\Include;$(ULTRAENGINE)\Include\Libraries\sol3\include;$(ULTRAENGINE)\Include\Libraries\Lua\src;$(ULTRAENGINE)\Include\Libraries\enet\include;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dTinyxml;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dExtensions;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dIkSolver;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dJoints;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dModels\dVehicle;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dModels\dCharacter;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dModels;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton\dParticles;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dNewton;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dCore;$(ULTRAENGINE)\Include\Libraries\newton\sdk\dCollision;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dVehicle\dMultiBodyVehicle;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dVehicle;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dMath;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dgCore;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dgNewton;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dAnimation;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dgTimeTracker;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dContainers;$(ULTRAENGINE)\Include\Libraries\NewtonDynamics\sdk\dCustomJoints</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <PrecompiledHeaderFile>UltraEngine.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile>Leadwerks.h</PrecompiledHeaderFile>
       <WholeProgramOptimization>false</WholeProgramOptimization>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <FloatingPointModel>Fast</FloatingPointModel>
@@ -146,6 +146,7 @@
     <ClCompile Include="Source\Components\Weapons\Projectile.cpp" />
     <ClCompile Include="Source\Encryption.cpp" />
     <ClCompile Include="Source\Game.cpp" />
+    <ClCompile Include="Source\Leadwerks.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\MainMenu.cpp" />
     <ClCompile Include="Source\SelectDevice.cpp">
@@ -155,10 +156,6 @@
     <ClCompile Include="Source\Steamworks\Steamworks.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="Source\UltraEngine.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
